# llama.cpp-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LLAMA_CPP_QUICK_START.md  PROJECT_DESCRIPTION.md  README.md  changelog.md  dev_output.txt  dev_output_utf8.txt  package-lock.json  package.json  sonar-project.properties  svelte.config.js  update_icons.py  vite.config.js
.postman/: config.json
docs/: BACKEND_ARCHITECTURE.md  CHANGELOG_DOCS.md  CHAT_HISTORY.md  CONFIGURATION_GUIDE.md  README.md  (+13 more)
src-tauri/: Cargo.toml  tarpaulin.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  infrastructure.rs  ipc_handlers.rs  lib.rs  main.rs  models.rs  services.rs  state.rs  utils.rs
src-tauri/src/commands/: chat.rs  chat_actions.rs  config.rs  general.rs  llama_cpp.rs  mcp.rs  mcp_config.rs  mod.rs  models.rs
src-tauri/src/infrastructure/: metrics.rs  nvidia_smi.rs
src-tauri/src/infrastructure/llama/: process.rs  server.rs
src-tauri/src/models/: app_config.rs  app_settings_model.rs  chat.rs  chat_model.rs  llama.rs  llama_model.rs  manifest.rs  manifest_model.rs  mcp.rs  mcp_model.rs
src-tauri/src/services/: capability_registry.rs  llama_cpp-refactor.md  llama_cpp.rs  mod.rs  orchestrator.rs  subagent.rs  templates.rs  thinking_parser.rs
src-tauri/src/services/llama/: actor.rs  service.rs
src-tauri/src/services/mcp/: client.rs  mod.rs  protocol.rs  service.rs
src-tauri/src/state/: mod.rs
src-tauri/tests/: .gitkeep  app_config.rs  app_config_test.rs  chat_actions.rs  chat_actions_commands_test.rs  chat_actions_test.rs  chat_commands_test.rs  chat_models.rs  chat_parsing.rs  config_commands_test.rs  lib.rs  llama_actor_test.rs  llama_cpp_commands_test.rs  llama_model_test.rs  llama_server_test.rs  llama_service_test.rs  mcp_client_test.rs  mcp_commands_test.rs  mcp_config.rs  mcp_config_commands_test.rs  mcp_integration.rs  mcp_service_internal_test.rs  mcp_service_test.rs  mcp_stdio.rs  metrics_test.rs  model_integration.rs  model_library.rs  models_commands.rs  models_commands_test.rs  models_internal_test.rs  models_test.rs  nvidia_smi_test.rs  parsing_test.rs  process_manager_test.rs  state_test.rs  utils.rs  utils_test.rs
src-tauri/tests/commands/: config_test.rs  mcp_config_test.rs  mod.rs  models_test.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/infrastructure/: metrics_test.rs  mod.rs  nvidia_smi_test.rs  process_manager_test.rs
src-tauri/tests/integration/: chat_flow_test.rs  mcp_lifecycle_test.rs  mod.rs  model_lifecycle_test.rs
src-tauri/tests/ipc/: mod.rs  orchestrator_test.rs
src-tauri/tests/services/: capability_registry_test.rs  llama_service_test.rs  mcp_service_test.rs  mod.rs  orchestrator_test.rs  thinking_parser_test.rs
(+135 files in other folders)
